# fabric-patterns-hub

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yaml  pyproject.toml
.github/workflows/: pre-commit.yaml  tests.yaml
.hooks/linters/: markdownlint.json
docs/: PATTERN_GUIDE.md
patterns/ansible-review/: README.md  ansible-standards.md  filter.sh  system.md  test-bad-playbook.yml  test-bad-report.md  test-good-playbook.yml  test-good-report.md  test-pattern.sh
patterns/changelog/: README.md  changelog-standards.md  filter.sh  system.md  test-commits.txt  test-pattern.sh
patterns/commit/: README.md  filter.sh  system.md
patterns/go-cobra/: README.md  cobra-viper-best-practices.md  filter.sh  system.md  test-cli-issues.go  test-pattern.sh
patterns/go-doc-comments/: README.md  filter.sh  go-documentation-standards.md  system.md  test-pattern.sh  test-undocumented.go
patterns/go-refactor/: README.md  filter.sh  go-best-practices.md  system.md  test-code-after.go  test-code-before.go  test-pattern.sh
patterns/go-review/: README.md  filter.sh  go-review-criteria.md  system.md  test-code-issues.go  test-pattern.sh
patterns/go-security-audit/: README.md  filter.sh  golang-security-guide.md  system.md  test-pattern.sh  test-secure.go  test-vulnerable.go
patterns/go-taskfile/: README.md  filter.sh  go-taskfile-standards.md  system.md
patterns/go-tests/: README.md  filter.sh  go-testing-patterns.md  system.md  test-code.go  test-pattern.sh
patterns/grafana-dashboard-audit/: README.md  filter.sh  (+4 more)
scripts/: filter.py
tests/: test_filter.py
(+38 files in other folders)
